Small changes to config and behaviour
* Added in onChange and onTouched
* Renamed `picker-config` to `pickerConfig`
* Added bump commands

--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "test": "exit 0",
     "prepublish": "tsc -p tsconfig.json",
-    "lint:ts": "tslint \"src/**/*.ts\""
+    "lint:ts": "tslint \"src/**/*.ts\"",
+    "bump:patch": "npm version patch -m \"%s [skip ci]\"",
+    "bump:minor": "npm version minor -m \"%s [skip ci]\"",
+    "bump:major": "npm version major -m \"%s [skip ci]\""
   },
   "repository": {
     "type": "git",
