--- a/demo/package.json
+++ b/demo/package.json
@@ -13,19 +13,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "2.0.0-rc.5",
-    "@angular/compiler": "2.0.0-rc.5",
-    "@angular/core": "2.0.0-rc.5",
-    "@angular/forms": "0.3.0",
-    "@angular/http": "2.0.0-rc.5",
-    "@angular/platform-browser": "2.0.0-rc.5",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.5",
-    "@angular/router": "3.0.0-rc.1",
-    "ng2-bootstrap": "^1.1.3",
-    "core-js": "^2.4.0",
-    "rxjs": "5.0.0-beta.11",
+    "@angular/common": "^2.4.0",
+    "@angular/compiler": "^2.4.0",
+    "@angular/core": "^2.4.0",
+    "@angular/forms": "^2.4.0",
+    "@angular/http": "^2.4.0",
+    "@angular/platform-browser": "^2.4.0",
+    "@angular/platform-browser-dynamic": "^2.4.0",
+    "@angular/router": "^3.4.0",
+    "ng2-bootstrap": "^1.1.16-11",
+    "core-js": "^2.4.1",
+    "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
-    "zone.js": "0.6.12"
+    "zone.js": "^0.7.4"
   },
   "devDependencies": {
     "@types/jasmine": "^2.2.30",
@@ -40,6 +40,6 @@
     "protractor": "4.0.3",
     "ts-node": "1.2.1",
     "tslint": "3.13.0",
-    "typescript": "^2.0.0"
+    "typescript": "2.0.10"
   }
 }
