--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
   "author": "Andy Mepham",
   "license": "MIT",
   "dependencies": {
-    "@angular/common": "^2.0.0-rc.6",
-    "@angular/core": "^2.0.0-rc.6",
-    "@angular/forms": "^2.0.0-rc.6",
-    "@angular/compiler": "^2.0.0-rc.6",
-    "ng2-bootstrap": "^1.1.1",
-    "rxjs": "^5.0.0-beta.11",
-    "zone.js": "^0.6.17"
+    "@angular/common": "^2.4.0",
+    "@angular/compiler": "^2.4.0",
+    "@angular/core": "^2.4.0",
+    "@angular/forms": "^2.4.0",
+    "ng2-bootstrap": "^1.1.16-11",
+    "rxjs": "^5.0.1",
+    "zone.js": "^0.7.4"
   },
   "devDependencies": {
     "tslint": "^3.15.1",
