--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@angular/compiler": "^2.4.0",
     "@angular/core": "^2.4.0",
     "@angular/forms": "^2.4.0",
-    "ng2-bootstrap": "^1.1.16-11",
+    "ng2-bootstrap": "~1.6.3",
     "rxjs": "^5.0.1",
     "zone.js": "^0.7.4"
   },
