--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "ng2-color-picker",
   "version": "1.1.0",
   "description": "Simple color picker for Angular 2",
-  "main": "lib/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "exit 0",
-    "prepublish": "tsc -p tsconfig.json",
+    "prepublish": "ngc -p tsconfig.json",
     "lint:ts": "tslint \"src/**/*.ts\"",
     "bump:patch": "npm version patch -m \"%s [skip ci]\"",
     "bump:minor": "npm version minor -m \"%s [skip ci]\"",
