--- a/demo/package.json
+++ b/demo/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "tsc:lib": "ngc -p ../tsconfig.dev.json"
+    "ngc:lib": "ngc -p ../tsconfig.dev.json"
   },
   "private": true,
   "dependencies": {
@@ -21,8 +21,9 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
-    "ng2-bootstrap": "~1.6.3",
     "core-js": "^2.4.1",
+    "ng2-bootstrap": "~1.6.3",
+    "ng2-color-picker": "^1.2.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
