--- a/package.json
+++ b/package.json
@@ -27,16 +27,17 @@
   "author": "Andy Mepham",
   "license": "MIT",
   "dependencies": {
-    "@angular/common": "^2.4.0",
-    "@angular/compiler": "^2.4.0",
-    "@angular/core": "^2.4.0",
-    "@angular/forms": "^2.4.0",
-    "ng2-bootstrap": "~1.6.3",
-    "rxjs": "^5.0.1",
-    "zone.js": "^0.7.4"
+    "@angular/common": "~4.0.0",
+    "@angular/compiler": "~4.0.0",
+    "@angular/core": "~4.0.0",
+    "@angular/forms": "~4.0.0",
+    "@angular/platform-browser": "~4.0.0",
+    "ngx-bootstrap": "~1.6.6",
+    "rxjs": "^5.1.0",
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "tslint": "^3.15.1",
-    "typescript": "^2.0.0"
+    "tslint": "~4.5.0",
+    "typescript": "~2.2.0"
   }
 }
