--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
+    "@angular/compiler-cli": "~4.0.0",
     "tslint": "~4.5.0",
     "typescript": "~2.2.0"
   }
