--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng2-color-picker",
-  "version": "1.3.0",
+  "version": "1.3.0-beta0.0.1",
   "description": "Simple color picker for Angular 2",
   "main": "dist/index.js",
   "scripts": {
