--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint:ts": "tslint \"src/**/*.ts\"",
     "bump:patch": "npm version patch -m \"%s [skip ci]\"",
     "bump:minor": "npm version minor -m \"%s [skip ci]\"",
-    "bump:major": "npm version major -m \"%s [skip ci]\""
+    "bump:major": "npm version major -m \"%s [skip ci]\"",
+    "bump:prerelease": "npm version prerelease -m \"%s [skip ci]\""
   },
   "repository": {
     "type": "git",
